# interactive-system-magic

./: .gitignore  CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: check.yml  main.yml  release.yml
interactive_system_magic/: __init__.py
tests/: test_interactive_system_magic.py
